The site is adapted for mobile devices

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="zxx">
 <head>
 	<title>Vulcan</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="fonts/Geometria/stylesheet.css">
+	<link rel="stylesheet" href="js/revealator/fm.revealator.jquery.css">
 </head>
 <body>
 
@@ -15,25 +16,25 @@
 				<div class="logo"></div>
 			</div>
 			<div class="header__mid f-row">
-				<div class="item mid__item item__top item__underline f-row">
-					<img src="img/header/frame1.png" alt="frame" height="100%">
+				<div class="item mid__item item__top item__underline f-row revealator-once revealator-fade revealator-delay2">
+					<img src="img/header/frame1.png" alt="frame" height="100">
 					<div class="suit suit__mid suit__first"></div>
 				</div>
-				<div class="item mid__item item__top f-row">
-					<img src="img/header/frame2.png" alt="frame" height="100%">
+				<div class="item mid__item item__top f-row revealator-once revealator-fade revealator-delay4">
+					<img src="img/header/frame2.png" alt="frame" height="100">
 					<div class="suit suit__mid suit__second"></div>
 				</div>
-				<div class="item mid__item item__top f-row">
-					<img src="img/header/frame1.png" alt="frame" height="100%">
+				<div class="item mid__item item__top f-row revealator-once revealator-fade revealator-delay6">
+					<img src="img/header/frame1.png" alt="frame" height="100">
 					<div class="suit suit__mid suit__third"></div>
 				</div>
-				<div class="item mid__item item__top item__underline f-row">
-					<img src="img/header/frame3.png" alt="frame" height="100%">
+				<div class="item mid__item item__top item__underline f-row revealator-once revealator-fade revealator-delay8">
+					<img src="img/header/frame3.png" alt="frame" height="100">
 					<div class="suit suit__mid suit__fourth"></div>
 				</div>
 			</div>
 			<div class="header__bot f-row">
-				<div class="container__down bot__container f-col">
+				<div class="container__down bot__container f-col revealator-once revealator-fade">
 					<h2 class="headline bot__headline">Новости вулкан</h2>
 					<div class="range bot__range f-col">
 						<div class="range__half f-row">
@@ -54,7 +55,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="bot__container f-col">
+				<div class="bot__container f-col revealator-once revealator-fade">
 					<h2 class="headline bot__headline">Автоматы вулкан</h2>
 					<div class="range bot__range f-col">
 						<div class="range__half f-row">
@@ -75,7 +76,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="container__down bot__container f-col">
+				<div class="container__down bot__container f-col revealator-once revealator-fade">
 					<h2 class="headline bot__headline">Игры вулкан</h2>
 					<div class="range bot__range f-col">
 						<div class="range__half f-row">
@@ -102,44 +103,44 @@
 
 	<section class="s1 f-row">
 		<div class="size f-col">
-			<h2 class="headline s1__headline f-row">Все казино вулкан</h2>
+			<h2 class="headline s1__headline f-row revealator-once revealator-fade">Все казино вулкан</h2>
 			<div class="casino f-row">
-				<div class="option f-col">
+				<div class="option f-col revealator-once revealator-fade">
 					<div class="option__item option__first ten"></div>
 					<p class="option__text">название казино</p>
 				</div>
 
-				<div class="option f-col">
+				<div class="option f-col revealator-once revealator-fade">
 					<div class="option__item option__first seven"></div>
 					<p class="option__text">название казино</p>
 				</div>
 
-				<div class="option f-col">
+				<div class="option f-col revealator-once revealator-fade">
 					<div class="option__item option__second six"></div>
 					<p class="option__text">название казино</p>
 				</div>
 
-				<div class="option f-col">
+				<div class="option f-col revealator-once revealator-fade">
 					<div class="option__item option__third nine"></div>
 					<p class="option__text">название казино</p>
 				</div>
 
-				<div class="option f-col">
+				<div class="option f-col revealator-once revealator-fade">
 					<div class="option__item option__first six"></div>
 					<p class="option__text">название казино</p>
 				</div>
 
-				<div class="option f-col">
+				<div class="option f-col revealator-once revealator-fade">
 					<div class="option__item option__third nine"></div>
 					<p class="option__text">название казино</p>
 				</div>
 
-				<div class="option f-col">
+				<div class="option f-col revealator-once revealator-fade">
 					<div class="option__item option__first ten"></div>
 					<p class="option__text">название казино</p>
 				</div>
 
-				<div class="option f-col">
+				<div class="option f-col revealator-once revealator-fade">
 					<div class="option__item option__second seven"></div>
 					<p class="option__text">название казино</p>
 				</div>
@@ -154,7 +155,8 @@
 				<div class="long-line line"></div>
 				<div class="short-line line"></div>
 			</div>
-			<p class="s2__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+			<h2 class="emptyHeadline">Empty</h2>
+			<p class="s2__text revealator-once revealator-fade">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 		</div>
 	</section>
 
@@ -181,5 +183,6 @@
 <script src="js/jquery-3.3.1.min.js"></script>
 <!-- Custom script -->
 <script src="js/main.js"></script>
+<script src="js/revealator/fm.revealator.jquery.js"></script>
 </body>
 </html>
